--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+.leftCard{
+    padding:10px;
+    text-align:center;
+    display:flex;
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.comp1,.comp2,.comp3{
+    text-align: center;
+    height: 20vh;
+    padding-top: 5vh;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.comp1{
+    background-color: rgb(241, 141, 58);
+    color: white;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.comp2{
+    background-color: rgb(0, 0, 0);
+    color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.comp3{
+    background-color: rgb(172, 9, 9);
+    color: white;
 }
